@@ -81,7 +81,7 @@ static void UpdateInfoWindow( struct AHIAudioModeRequesterExt * );
 #define ownIDCMP    0x0008
 #define defaultmode 0x0010
 
-static struct TagItem reqboolmap[] =
+static const struct TagItem reqboolmap[] =
 {
   { AHIR_PrivateIDCMP,   haveIDCMP   },
   { AHIR_SleepWindow,    lockwin     },
@@ -153,7 +153,7 @@ struct AHIAudioModeRequesterExt
 };
 
 
-static struct TextAttr Topaz80 = { "topaz.font", 8, 0, 0, };
+static const struct TextAttr Topaz80 = { "topaz.font", 8, 0, 0, };
 
 #define MINSLIDERWIDTH 40
 
@@ -481,7 +481,7 @@ static void SetSelected(struct AHIAudioModeRequesterExt *req, BOOL all)
 ** Positions all gadgets in the requester.
 */
 
-static BOOL LayOutReq (struct AHIAudioModeRequesterExt *req, struct TextAttr *TextAttr)
+static BOOL LayOutReq (struct AHIAudioModeRequesterExt *req, const struct TextAttr *TextAttr)
 {
   struct Gadget *gad;
   struct NewGadget ng;
@@ -516,7 +516,7 @@ static BOOL LayOutReq (struct AHIAudioModeRequesterExt *req, struct TextAttr *Te
   if((gad=CreateContext(&req->Gadgets)))
   {
     if(TextAttr)
-      gadtextattr=TextAttr;
+      gadtextattr=(struct TextAttr *)TextAttr;
     else
       gadtextattr=req->Window->WScreen->Font;
 
